--- a/labs/index.css
+++ b/labs/index.css
@@ -1,5 +1,5 @@
 p {
-    color: orange;
+    color: #333;
     font-size-adjust: 24;
 
 }
@@ -18,11 +18,11 @@ p {
 
 
 #velvet:hover {
-    color: rgb(0, 0, 0);
+    color: rgb(230, 227, 227);
 }
 
 #sabbath:hover {
-    color: rgba(63, 3, 94, 0.133);
+    color: rgba(113, 9, 165, 0.877);
 }
 
 
