--- a/views/includes/labs.foot.ejs
+++ b/views/includes/labs.foot.ejs
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer has-background-grey-dark">
     <div class="content has-text-centered">
       <p>
         <a href="https://code.visualstudio.com/">VSCODE</a>
