--- a/views/includes/labs.head.ejs
+++ b/views/includes/labs.head.ejs
@@ -9,43 +9,76 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
-    
     <header>
-
-        <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-                <div class="box has-background-grey">
-                    <h1 class="title is-1-desktop">Labs Tc2005b</h1>
-                    <h2 class="subtitle is-1-desktop">Jorge Emiliano Pomar A01709338</h2>
-                </div>
-          
-              <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
+        <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+          <div class="navbar-brand">
+            <div class="box has-background-grey">
+                <h1 class="title is-1-desktop has-text-white">Labs Tc2005b</h1>
+                <h2 class="subtitle is-1-desktop has-text-white">Jorge Emiliano Pomar A01709338</h2>
+              </div>
+      
+            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
+      
+          <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+              <a class="navbar-item has-text-white" href="/labs/preguntas">
+                Preguntas Labs
+              </a>
+      
+              <a class="navbar-item has-text-white" href="/labs/discos">
+                Discos
+              </a>
+      
+              <a class="navbar-item has-text-white" href="/labs/nuevodisco">
+                Nuevo Disco
+              </a>
+      
+              <a class="navbar-item has-text-white" href="/labs/tienda">
+                Tienda
+              </a>
+      
+              <a class="navbar-item has-text-white" href="/labs/peliculas">
+                Películas
               </a>
             </div>
-          
-            <div id="navbarBasicExample" class="navbar-menu">
-              <div class="navbar-start">
-                <a class="navbar-item">
-                  Primeros Labs
-                </a>
-          
-                <a class="navbar-item">
-                    Discos
-                </a>
-
-                <a class="navbar-item">
-                    Nuevo Disco
-                </a>
-
-                <a class="navbar-item">
-                    Tienda
-                </a>
-
-                <a class="navbar-item">
-                    Peliculas
-                </a>
-
+          </div>
+        </nav>
     </header>
+
+<style>
+    p.title.is-5-desktop {
+        color: white; 
+    }
+
+    p.title.is-4 {
+        color: white; 
+    }
+
+    .column {
+      margin-bottom: 100px;
+      background-color: #333;
+    }
+
+    .card {
+      background-color: #333;
+    }
+
+    .media {
+      display: flex;
+      align-items: center; 
+    }
+
+    .media-left {
+      margin-right: 20px;
+    }
+
+    .dark-background {
+        background-color: #333;  
+    }
+
+</style>
