--- a/views/labs_list/preguntas.ejs
+++ b/views/labs_list/preguntas.ejs
@@ -268,14 +268,39 @@
                 <br>
                 <p>Para que el usuario tenga una experiencia con la interfaz rápida, y no se tenga que esperar o ingresar a ver si hay algún problema con el servidor. Tan solo con haber ingresado un campo incorrectamente, tendrá una retroalimentación instantpanea por medio de javascript. </p>
                 <hr>
+                <b>Pregunta Lab 11 Express</b>
+                <hr>
+                <p>El archivo package.json tiene información útil del proyecto de npm.
+                    Puedes incluír documentación como el nombre del proyecto, archivos, versión. Al igual que
+                    puedes incluír la información del repositorio
+                    en el que se almacena el proyecto. 
+                    Incluye metadatos como el nombre, la versión y las dependencias. Que esta última es 
+                    información necesaria para las bibliotecas que se instalan con npm-install.
+                    Así que es muy útil para gestionar los proyectos de npm.</p>
+                <hr>
+                <b>Pregunta Lab 12 HTML dinámico</b>
+                <hr>
+                <p>Q: ¿Qué otros templating engines existen para node?
+
+                    A: Pug, Haml, hbs, Squirrelly, Eta, combyne, Nunjucks, marko, whiskers, Blade, rivets-server, Liquidjs, twing, sprightly
+                    html-express-js. 
+                    
+                    Template engines. (n.d.). https://expressjs.com/en/resources/template-engines.html</p>
+                <hr>
+                <b>Preguntas Lab 13 MVC</b>
+                <hr>
+                <b>¿Qué beneficios encuentras en el estilo MVC?</b>
+                <br>
+                <p>El principal beneficio de utilizar esta forma de arquitectura es que podemos trabajar en un ambiente más
+                 manejable, en el que los errores pueden ser atendidos rápidamente cuando se organiza y separa en archivos dependiendo de su funcionalidad. Además, con esta técnica, se pueden usar capas que optimisan la forma en la que se atienden las peticiones mientras que se maneja de manera más entendible el aspecto gráfico para el cliente. Y por último, esta técninca es beneficiosa para la seguridad de la página, ya que al hacer que las rutas estén separadas se hacen más mantenibles.</p>
+                <br>
+                <b>¿Encuentras alguna desventaja en el estilo arquitectónico MVC?</b>
+                <br>
+                <p>Si, que no se pueden manipular el DOM con comandos de event listener. O bueno, al menos yo no pude ya que se necesita de otra tecnica arquitectónica que responda al lado del client server.</p>
 
             </article> 
         </div>
     </section>
     <%- include('../includes/labs.foot.ejs') %>
-
-
-
-    
 </body>
 </html>
