--- a/views/labs_list/peliculas.ejs
+++ b/views/labs_list/peliculas.ejs
@@ -1,76 +1,33 @@
 <%- include('../includes/labs.head.ejs') %>
 <body>
-    <section class="section">
-        <h2> Mis películas favoritas: </h2>
-        <hr>
-        <div class="columns">
-            <div class="column">
-                <div class="card">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                                <figure class="image is-48x48">
-                                    <img src="https://m.media-amazon.com/images/M/MV5BYTRiMzg4NDItNTc3Zi00NjBjLTgwOWYtOGZjMTFmNGU4ODY4XkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg"
-                                        alt="Mulholland Drive (2001)">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <p class="title is-4">Mulholland Drive (2001)</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                                <figure class="image is-48x48">
-                                    <img src="https://m.media-amazon.com/images/I/81V7dvwNlIL._UF1000,1000_QL80_.jpg"
-                                        alt="Taxi Driver (1976)">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <p class="title is-4">Taxi Driver (1976)</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                                <figure class="image is-48x48">
-                                    <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2016/12/reservoir-dogs.jpg?tf=2048x"
-                                        alt="Reservoir Dogs(1992)">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <p class="title is-4">Reservoir Dogs(1992)</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                                <figure class="image is-48x48">
-                                    <img src="https://s3.amazonaws.com/criterion-production/films/0463cff2aba2f851fe53803acc03c022/20tdF8noUnU8VylJFM2YRMtlgNgKTn_large.jpg"
-                                        alt="Twin Peaks: Fire Walk With Me (1992)">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <p class="title is-4">Twin Peaks: Fire Walk With Me (1992)
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <section class="section has-background-black-bis  has-text-white-bis">
+        <p class="title is-5-desktop">Mis peliculas favoritas</p>
+        <div class="media-left">
+            <figure class="image is-48x48">
+                <img src="https://cdn-icons-png.flaticon.com/512/2991/2991552.png"
+                    alt="logo">
+            </figure>
         </div>
+
+        <hr>
+        <% for(let pelicula of peliculas) { %>
+            <div class="columns">
+                <div class="column">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="image is-128x128">
+                                        <img src="<%= pelicula.imagen%>"
+                                            alt="<%= pelicula.nombre%>">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="title is-4"><%= pelicula.nombre%></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        <% } %>
     </section>
 </body>
 
