Agregar cookie tiempo y fix views

--- a/views/includes/labs.head.ejs
+++ b/views/includes/labs.head.ejs
@@ -12,10 +12,10 @@
     <header>
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
           <div class="navbar-brand">
-            <div class="box has-background-grey">
+            <div class="box has-background-black-bis">
                 <h1 class="title is-1-desktop has-text-white">Labs Tc2005b</h1>
                 <h2 class="subtitle is-1-desktop has-text-white">Jorge Emiliano Pomar A01709338</h2>
-              </div>
+            </div>
       
             <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
               <span aria-hidden="true"></span>
@@ -53,6 +53,7 @@
 <style>
     p.title.is-5-desktop {
         color: white; 
+        text-align: center;
     }
 
     p.title.is-4 {
