--- a/views/labs_list/tienda.ejs
+++ b/views/labs_list/tienda.ejs
@@ -2,6 +2,12 @@
 <body class="dark-background">
     <div class="container is-fullhd">
         <p class="title is-5-desktop">Tienda</p>
+        <div class="is-vcentered">
+            <figure class="image is-128x128">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/66/Oxxo_Logo.svg/1200px-Oxxo_Logo.svg.png" alt="Tienda">
+            </figure>
+        </div>
+        <p class="title is-4">Productos</p>
         <div class="card">
             <div class="card-content">
                 <% if (productos.length > 0) { %>
@@ -21,7 +27,11 @@
                     <% } %>
                 <% } %>
             </div>
+            <p class= "title is-4">Tiempo desde el último acceso: <%= tiempo_transcurrido %> segundos.</p>
         </div>
     </div>
 </body>
+
+
+
 <%- include('../includes/labs.foot.ejs') %>
