--- a/views/includes/labs.foot.ejs
+++ b/views/includes/labs.foot.ejs
@@ -1,7 +1,11 @@
-<footer class="footer has-background-grey-dark">
-    <div class="content has-text-centered">
+<footer class="footer has-background-grey-darker">
+    <div class>
+      <p class="title is-5-desktop has-text-white">Laboratorios</p>
       <p>
         <a href="https://code.visualstudio.com/">VSCODE</a>
       </p>
+      <figure class>
+        <img src="https://i.kym-cdn.com/photos/images/newsfeed/002/652/460/d70.jpg" width="100" height="135">
+      </figure>
     </div>
 </footer>
