--- a/views/labs_list/nuevodisco.ejs
+++ b/views/labs_list/nuevodisco.ejs
@@ -6,12 +6,12 @@
         <section class="section">
             <div class="container">
                 <h1 class="title">Registro de discos</h1>
-                <form action="/labs" method="POST">
+                <form action="/labs/discos" method="POST">
                 <label for="nombre">Nombre del disco</label>
                 <input id="nombre" name="nombre" class="input" type="text" placeholder="Album">
                 <br><br>
                 <label for="artista">Artista</label>
-                <input id="artista" name="artista" class="input" type="text" placeholder="Artista">
+                <input id="imagen" name="imagen" class="input" type="url" placeholder="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/The_Dark_Side_of_the_Moon_Cover.svg/1200px-The_Dark_Side_of_the_Moon_Cover.svg.png">
                 <br>
                 <input id="registrar" name="registrar" type="submit" value="Registrar" class="button is-info">
             </form>
