--- a/views/labs_list/tienda.ejs
+++ b/views/labs_list/tienda.ejs
@@ -24,13 +24,14 @@
                                 <figure class="card are-small" id="precio_producto">...</figure>
                             </div>
                         </div>
+                        <script src="../public/tiendaDOM.js"></script>
                     <% } %>
                 <% } %>
             </div>
             <p class= "title is-4">Tiempo desde el último acceso: <%= tiempo_transcurrido %> segundos.</p>
         </div>
     </div>
-    <script src="../public/js/tiendaDOM.js"></script>
+    
 </body>
 
 
