Lab 17: agregar sql

--- a/views/includes/labs.head.ejs
+++ b/views/includes/labs.head.ejs
@@ -41,10 +41,10 @@
               </a>
       
               <a class="navbar-item has-text-white" href="/labs/nuevodisco">
-                Nuevo Disco
+                Agregar discos
               </a>
       
-              <a class="navbar-item has-text-white" href="/labs/tienda">
+              <a class="navbar-item has-text-white " href="/labs/tienda">
                 Tienda
               </a>
       
@@ -52,9 +52,9 @@
                 Películas
               </a>
 
-              <span class="navbar-item">
-                <%= username%>
-              </span>
+              <a class="navbar-item has-text-white" href="/labs/nuevapelicula">
+                Agregar películas
+              </a>
             </div>
           </div>
         </nav>
