Agregar preguntas lab18

--- a/views/labs/preguntas.ejs
+++ b/views/labs/preguntas.ejs
@@ -331,8 +331,12 @@
                     <div class="question">¿Qué es SQL injection y cómo se puede prevenir?</div>
                     <br>
                     <p>Es una vulnerabilidad que se da cuando se inserta código malicioso en una query. Como drop tables por ejemplo. Y la manera de prevenirlo es poniendo signos de interrogación en donde se insertaran los datos por el usuario para que el sistema sepa que ahí es donde se leeran los datos pero al mismo tiempo cuidas la parte de la vulnerabilidad de la página al cerrar esos "puertos". </p>
-
-    
+                    <hr>
+                    <div class="question">Preguntas Lab 18</div>
+                    <hr>
+                    <div class="question">¿Qué otras formas de autentificación existen?</div>
+                    <br>
+                    <p>Contraseña de un solo uso (OTP), certificados PKI, tecla confidencial defensa, por medio de información biométrica (como la huella dactilar o reconicimiento facial), autentificación en dos pasos (generalmente con un código de un solo uso que se envía a un método de comunicación con el usuario)</p>
                 </article> 
             </div>
         </section>
